adding social media and adding the image

--- a/index.html
+++ b/index.html
@@ -22,6 +22,24 @@
         </nav>
     </header>
 
+    <section class="home" id="home">
+        <div class="home-content">
+            <h3>Hello, It's me</h3>
+            <h1>Mostafa Saleh</h1>
+            <h3>And I'm a <span>Frontend Developer</span></h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptates neque minima quas, ea quae rerum voluptate?</p>
+            <div class="social-media">
+                <a href="#"><i class='bx bxl-facebook' ></i></a>
+                <a href="#"><i class='bx bxl-instagram' ></i></a>
+                <a href="#"><i class='bx bxl-github' ></i></a>
+                <a href="#"><i class='bx bxl-linkedin' ></i></a>
+            </div>
+            <a href="#" class="btn">Download CV</a>
+        </div>
+        <div class="home-img">
+            <img src="images/person.jpg" alt="">
+        </div>
+    </section>
     <script src="js/js.js"></script>
 </body>
 </html>
