adding my photo

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <a href="#" class="btn">Download CV</a>
         </div>
         <div class="home-img">
-            <img src="images/person.jpg" alt="">
+            <img class="home-img" src="images/1.jpg" alt="img">
         </div>
     </section>
     <script src="js/js.js"></script>
