animating the navbar and the image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <nav class="navbar">
             <a href="#home" class="navbar-links active">Home</a>
             <a href="#about" class="navbar-links">About</a>
-            <a href="#services" class="navbar-links">Services</a>
+            <a href="#skills" class="navbar-links">Skills</a>
             <a href="#portfolio" class="navbar-links">Portfolio</a>
             <a href="#contact" class="navbar-links">Contact</a>
         </nav>
@@ -31,8 +31,10 @@
             <div class="social-media">
                 <a href="#"><i class='bx bxl-facebook' ></i></a>
                 <a href="#"><i class='bx bxl-instagram' ></i></a>
-                <a href="#"><i class='bx bxl-github' ></i></a>
                 <a href="#"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://wa.me/+201140855227"><i class='bx bxl-whatsapp'></i></a>
+                <a href="#"><i class='bx bxl-github' ></i></a>
+                <a href="#"><i class='bx bx-envelope' ></i></a>
             </div>
             <a href="#" class="btn">Download CV</a>
         </div>
