animating the page with @keyframes

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
             <h3>And I'm a <span>Frontend Developer</span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptates neque minima quas, ea quae rerum voluptate?</p>
             <div class="social-media">
-                <a href="#"><i class='bx bxl-facebook' ></i></a>
-                <a href="#"><i class='bx bxl-instagram' ></i></a>
-                <a href="#"><i class='bx bxl-linkedin' ></i></a>
-                <a href="https://wa.me/+201140855227"><i class='bx bxl-whatsapp'></i></a>
-                <a href="#"><i class='bx bxl-github' ></i></a>
-                <a href="#"><i class='bx bx-envelope' ></i></a>
+                <a href="#"style="--i:1"><i class='bx bxl-facebook' ></i></a>
+                <a href="#"style="--i:2"><i class='bx bxl-instagram' ></i></a>
+                <a href="#"style="--i:3"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://wa.me/+201140855227"style="--i:4"><i class='bx bxl-whatsapp'></i></a>
+                <a href="#"style="--i:5"><i class='bx bxl-github' ></i></a>
+                <a href="#"style="--i:6"><i class='bx bx-envelope' ></i></a>
             </div>
             <a href="#" class="btn">Download CV</a>
         </div>
