--- a/index.html
+++ b/index.html
@@ -29,12 +29,14 @@
             <h3>And I'm a <span>Frontend Developer</span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptates neque minima quas, ea quae rerum voluptate?</p>
             <div class="social-media">
-                <a href="#"style="--i:1"><i class='bx bxl-facebook' ></i></a>
-                <a href="#"style="--i:2"><i class='bx bxl-instagram' ></i></a>
-                <a href="#"style="--i:3"><i class='bx bxl-linkedin' ></i></a>
+                <a href="https://www.facebook.com/Saleh2011/"style="--i:1"><i class='bx bxl-facebook' ></i></a>
+                <a href="https://www.instagram.com/mostafamsaleh/"style="--i:2"><i class='bx bxl-instagram' ></i></a>
+                <a href="https://www.linkedin.com/in/mostafasaleh5/"style="--i:3"><i class='bx bxl-linkedin' ></i></a>
                 <a href="https://wa.me/+201140855227"style="--i:4"><i class='bx bxl-whatsapp'></i></a>
-                <a href="#"style="--i:5"><i class='bx bxl-github' ></i></a>
-                <a href="#"style="--i:6"><i class='bx bx-envelope' ></i></a>
+                <a href="https://github.com/mostafasaleh1"style="--i:5"><i class='bx bxl-github' ></i></a>
+                <a href="mailto:most.saleh@hotmail.com"style="--i:6"><i class='bx bx-envelope' ></i></a>
+                <a href="https://telegram.me/+79998102536?start=chat"style="--i:8"><i class='bx bxl-telegram' ></i></a>
+                <a href="tel:+201140855227"style="--i:7"><i class='bx bxs-phone'></i></a>
             </div>
             <a href="#" class="btn">Download CV</a>
         </div>
