--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="home-content">
             <h3>Hello, It's me</h3>
             <h1>Mostafa Saleh</h1>
-            <h3>And I'm a <span>Frontend Developer</span></h3>
+            <h3>And I'm a <span class="typed"></span></h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptates neque minima quas, ea quae rerum voluptate?</p>
             <div class="social-media">
                 <a href="https://www.facebook.com/Saleh2011/"style="--i:1"><i class='bx bxl-facebook' ></i></a>
@@ -36,7 +36,7 @@
                 <a href="https://github.com/mostafasaleh1"style="--i:5"><i class='bx bxl-github' ></i></a>
                 <a href="mailto:most.saleh@hotmail.com"style="--i:6"><i class='bx bx-envelope' ></i></a>
                 <a href="https://telegram.me/+79998102536?start=chat"style="--i:8"><i class='bx bxl-telegram' ></i></a>
-                <a href="tel:+201140855227"style="--i:7"><i class='bx bxs-phone'></i></a>
+                <a href="tel:+201140855227"style="--i:9"><i class='bx bxs-phone'></i></a>
             </div>
             <a href="#" class="btn">Download CV</a>
         </div>
@@ -44,6 +44,7 @@
             <img class="home-img" src="images/1.jpg" alt="img">
         </div>
     </section>
+    <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
     <script src="js/js.js"></script>
 </body>
 </html>
