adding meta tags to the website

--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies and my perspective in some topics, my name is Mostafa Saleh.">
+    <meta name="author" content="Mostafa Saleh">
+    <!--Open Graph Meta Tags-->
+    <meta property="og:url" content="eng-mostafasaleh.blogspot.com">
+    <meta property="og:title" content="Mostafa Saleh">
+    <meta property="og:description" content="This is my blog, in which in introduce my self, my strengths, and a brief of my hobbies and my perspective in some topics, Mostafa Saleh.">
+    <meta property="og:image" content="">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="eng-mostafasaleh.blogspot.com">
+    <meta property="twitter:url" content="eng-mostafasaleh.blogspot.com">
+    <meta name="twitter:title" content="Mostafa Saleh">
+    <meta name="twitter:description" content="This is my blog, in which in introduce my self, my strengths, and a brief of my hobbies and my perspective in some topics, Mostafa Saleh.">
+    <meta name="twitter:image" content="">
+    <!--Open Graph Meta Tags END-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
