fixing fonts are small on google chrome

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <a href="https://telegram.me/+79998102536?start=chat"style="--i:8"><i class='bx bxl-telegram' ></i></a>
                 <a href="tel:+201140855227"style="--i:9"><i class='bx bxs-phone'></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="https://github.com/mostafasaleh1/CV/blob/main/CV.pdf" class="btn">Download CV</a>
         </div>
         <div class="home-img">
             <img class="home-img" src="images/1.jpg" alt="img">
