--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies and my perspective in some topics, my name is Mostafa Saleh.">
     <meta name="author" content="Mostafa Saleh">
+
     <!--Open Graph Meta Tags-->
     <meta property="og:url" content="eng-mostafasaleh.blogspot.com">
     <meta property="og:title" content="Mostafa Saleh">
@@ -17,10 +18,21 @@
     <meta name="twitter:title" content="Mostafa Saleh">
     <meta name="twitter:description" content="This is my blog, in which in introduce my self, my strengths, and a brief of my hobbies and my perspective in some topics, Mostafa Saleh.">
     <meta name="twitter:image" content="">
-    <!--Open Graph Meta Tags END-->
+    <!--END Open Graph Meta Tags-->
+
+    <!--Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon/site.webmanifest">
+    <!--END Favicon-->
+
+    <!--Linking Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <!--Linking Fonts-->
+
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="styles/styles.css">
     <title>Mostafa Saleh</title>
@@ -52,7 +64,7 @@
                 <a href="https://telegram.me/+79998102536?start=chat"style="--i:8"><i class='bx bxl-telegram' ></i></a>
                 <a href="tel:+201140855227"style="--i:9"><i class='bx bxs-phone'></i></a>
             </div>
-            <a href="https://github.com/mostafasaleh1/CV/blob/main/CV.pdf" class="btn">Download CV</a>
+            <a href="https://github.com/mostafasaleh1/CV/raw/main/CV.pdf" class="btn">Download CV</a>
         </div>
         <div class="home-img">
             <img class="home-img" src="images/1.jpg" alt="img">
