updating meta tags description

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <!--Open Graph Meta Tags-->
     <meta property="og:url" content="eng-mostafasaleh.blogspot.com">
     <meta property="og:title" content="Mostafa Saleh">
-    <meta property="og:description" content="This is my blog, in which in introduce my self, my strengths, and a brief of my hobbies and my perspective in some topics, Mostafa Saleh.">
+    <meta property="og:description" content="This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies and my perspective in some topics, my name is Mostafa Saleh.">
     <meta property="og:image" content="">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="eng-mostafasaleh.blogspot.com">
     <meta property="twitter:url" content="eng-mostafasaleh.blogspot.com">
     <meta name="twitter:title" content="Mostafa Saleh">
-    <meta name="twitter:description" content="This is my blog, in which in introduce my self, my strengths, and a brief of my hobbies and my perspective in some topics, Mostafa Saleh.">
+    <meta name="twitter:description" content="This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies and my perspective in some topics, my name is Mostafa Saleh.">
     <meta name="twitter:image" content="">
     <!--END Open Graph Meta Tags-->
 
