--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
             <a href="#contact" class="navbar-links">Contact</a>
         </nav>
     </header>
-
+    <!--HOME-->
     <section class="home" id="home">
         <div class="home-content">
             <h3>Hello, It's me</h3>
             <h1>Mostafa Saleh</h1>
             <h3>And I'm a <span class="typed"></span></h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus voluptates neque minima quas, ea quae rerum voluptate?</p>
+            <p>I'm a software developer who is passionate about creating technology to elevate people and help new developers to find the right path. Some technologies I enjoy working with include Javascript, ReactJS.</p>
             <div class="social-media">
                 <a href="https://www.facebook.com/Saleh2011/"style="--i:1" target="_blank"><i class='bx bxl-facebook'></i></a>
                 <a href="https://www.instagram.com/mostafamsaleh/"style="--i:2" target="_blank"><i class='bx bxl-instagram'></i></a>
@@ -69,6 +69,23 @@
         <div class="home-img">
             <img class="home-img" src="images/1.jpg" alt="img">
         </div>
+    </section>
+    <!--END HOME-->
+    <!--ABOUT-->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="images/1.jpg" alt="about img">
+        </div>
+        <div class="about-content">
+            <h2 class="heading">About <span>Me</span></h2>
+            <h3>Frontend Developer</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eveniet explicabo similique soluta illo numquam suscipit veritatis, quas laudantium totam dolorum necessitatibus in quo exercitationem ullam. Voluptatem consequuntur dicta sed eaque, sapiente maiores non facilis vero error, temporibus quaerat, accusamus animi quidem? Cupiditate corporis ex vero.</p>
+            <a href="#" class="btn">Read More</a>
+        </div>
+    </section>
+    <!--END ABOUT-->
+    <section class="sec">
+
     </section>
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
     <script src="js/js.js"></script>
