creating the structure of the servieces section

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         </nav>
     </header>
     <!--HOME-->
-    <section class="home" id="home">
+    <section class="home">
         <div class="home-content">
             <h3>Hello, It's me</h3>
             <h1>Mostafa Saleh</h1>
@@ -72,7 +72,7 @@
     </section>
     <!--END HOME-->
     <!--ABOUT-->
-    <section class="about" id="about">
+    <section class="about">
         <div class="about-img">
             <img src="images/1.jpg" alt="about img">
         </div>
@@ -84,8 +84,30 @@
         </div>
     </section>
     <!--END ABOUT-->
-    <section class="sec">
+    <section class="services">
+        <h2 class="heading">Our <span>Services</span></h2>
+        <div class="services-container">
+            <div class="services-box">
+                <i class='bx bx-code-alt'></i>
+                <h3>Web Development</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam molestiae nemo pariatur tenetur soluta.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
 
+            <div class="services-box">
+                <i class='bx bx-paint'></i>
+                <h3>Graphic Design</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam molestiae nemo pariatur tenetur soluta.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+
+            <div class="services-box">
+                <i class='bx bx-line-chart' ></i>
+                <h3>Digital Marketing</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam molestiae nemo pariatur tenetur soluta.</p>
+                <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
     </section>
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
     <script src="js/js.js"></script>
