finishing services section!

--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
         <nav class="navbar">
             <a href="#home" class="navbar-links active">Home</a>
             <a href="#about" class="navbar-links">About</a>
-            <a href="#skills" class="navbar-links">Skills</a>
+            <a href="#services" class="navbar-links">Services</a>
             <a href="#portfolio" class="navbar-links">Portfolio</a>
             <a href="#contact" class="navbar-links">Contact</a>
         </nav>
     </header>
     <!--HOME-->
-    <section class="home">
+    <section class="home" id="home">
         <div class="home-content">
             <h3>Hello, It's me</h3>
             <h1>Mostafa Saleh</h1>
@@ -72,7 +72,7 @@
     </section>
     <!--END HOME-->
     <!--ABOUT-->
-    <section class="about">
+    <section class="about" id="about">
         <div class="about-img">
             <img src="images/1.jpg" alt="about img">
         </div>
@@ -84,7 +84,7 @@
         </div>
     </section>
     <!--END ABOUT-->
-    <section class="services">
+    <section class="services" id="services">
         <h2 class="heading">Our <span>Services</span></h2>
         <div class="services-container">
             <div class="services-box">
@@ -109,6 +109,7 @@
             </div>
         </div>
     </section>
+
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
     <script src="js/js.js"></script>
 </body>
