creating the structure of the portfolio section

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         </div>
     </section>
     <!--END ABOUT-->
+    <!--SERVICES-->
     <section class="services" id="services">
         <h2 class="heading">Our <span>Services</span></h2>
         <div class="services-container">
@@ -106,6 +107,66 @@
                 <h3>Digital Marketing</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam molestiae nemo pariatur tenetur soluta.</p>
                 <a href="#" class="btn">Read More</a>
+            </div>
+        </div>
+    </section>
+    <!--END SERVICES-->
+    <!--PORTFOLIO-->
+    <section class="portfolio" id="portfolio">
+        <h2 class="heading">Latest <span>Project</span></h2>
+        <div class="protfolio-container">
+            <div class="portfolio-box">
+                <img src="images/portfolio1.jpg" alt="portfolio1">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="images/portfolio2.jpg" alt="portfolio1">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+            
+            <div class="portfolio-box">
+                <img src="images/portfolio3.jpg" alt="portfolio1">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="images/portfolio4.jpg" alt="portfolio1">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="images/portfolio5.jpg" alt="portfolio1">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
+            </div>
+
+            <div class="portfolio-box">
+                <img src="images/portfolio6.jpg" alt="portfolio1">
+                <div class="portfolio-layer">
+                    <h4>Web Design</h4>
+                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
+                    <a href="#"><i class='bx bx-link-external'></i></a>
+                </div>
             </div>
         </div>
     </section>
