styling the portfolio section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <h2 class="heading">Latest <span>Project</span></h2>
         <div class="protfolio-container">
             <div class="portfolio-box">
-                <img src="images/portfolio1.jpg" alt="portfolio1">
+                <img src="images/portfolio/portfolio1.jpg" alt="portfolio1">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
@@ -125,7 +125,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio2.jpg" alt="portfolio1">
+                <img src="images/portfolio/portfolio2.jpg" alt="portfolio1">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
@@ -134,7 +134,7 @@
             </div>
             
             <div class="portfolio-box">
-                <img src="images/portfolio3.jpg" alt="portfolio1">
+                <img src="images/portfolio/portfolio3.jpg" alt="portfolio1">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
@@ -143,7 +143,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio4.jpg" alt="portfolio1">
+                <img src="images/portfolio/portfolio4.jpg" alt="portfolio1">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
@@ -152,7 +152,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio5.jpg" alt="portfolio1">
+                <img src="images/portfolio/portfolio5.jpg" alt="portfolio1">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
@@ -161,7 +161,7 @@
             </div>
 
             <div class="portfolio-box">
-                <img src="images/portfolio6.jpg" alt="portfolio1">
+                <img src="images/portfolio/portfolio6.jpg" alt="portfolio1">
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
@@ -169,6 +169,10 @@
                 </div>
             </div>
         </div>
+    </section>
+    <!--END PORTFOLIO-->
+    <section>
+
     </section>
 
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
