--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 </head>
 <body>
     <header class="header">
+        <i class='bx bx-menu' id="menu-icon"></i>
         <nav class="navbar">
             <a href="#home" class="navbar-links active">Home</a>
             <a href="#about" class="navbar-links">About</a>
@@ -91,21 +92,21 @@
             <div class="services-box">
                 <i class='bx bx-code-alt'></i>
                 <h3>Web Development</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam molestiae nemo pariatur tenetur soluta.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi veritatis dignissimos fugit laudantium? Porro nemo eaque ad accusantium voluptatum quos velit, quia odio sed necessitatibus!</p>
                 <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="services-box">
                 <i class='bx bx-paint'></i>
                 <h3>Graphic Design</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam molestiae nemo pariatur tenetur soluta.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi veritatis dignissimos fugit laudantium? Porro nemo eaque ad accusantium voluptatum quos velit, quia odio sed necessitatibus!</p>
                 <a href="#" class="btn">Read More</a>
             </div>
 
             <div class="services-box">
                 <i class='bx bx-line-chart' ></i>
                 <h3>Digital Marketing</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quisquam molestiae nemo pariatur tenetur soluta.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi veritatis dignissimos fugit laudantium? Porro nemo eaque ad accusantium voluptatum quos velit, quia odio sed necessitatibus!</p>
                 <a href="#" class="btn">Read More</a>
             </div>
         </div>
