fixing when the portfolio section interferes with services section

--- a/index.html
+++ b/index.html
@@ -172,8 +172,8 @@
         </div>
     </section>
     <!--END PORTFOLIO-->
-    <section>
-
+    <section class="contact" id="contact">
+        
     </section>
 
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
