creating the structure of contact me form

--- a/index.html
+++ b/index.html
@@ -173,7 +173,19 @@
     </section>
     <!--END PORTFOLIO-->
     <section class="contact" id="contact">
-        
+        <h2 class="heading">Contact <span>Me</span></h2>
+        <form action="#">
+            <div class="input-box">
+                <input type="text" placeholder="Full Name">
+                <input type="email" placeholder="Email Address">
+            </div>
+            <div class="input-box">
+                <input type="text" placeholder="Mobile Number">
+                <input type="email" placeholder="Email Subject">
+            </div>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <input type="submit" value="Send Message" class="btn">
+        </form>
     </section>
 
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
