styling contact me section

--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 <input type="text" placeholder="Mobile Number">
                 <input type="email" placeholder="Email Subject">
             </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
+            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" style="resize: none;"></textarea>
             <input type="submit" value="Send Message" class="btn">
         </form>
     </section>
