--- a/index.html
+++ b/index.html
@@ -172,6 +172,7 @@
         </div>
     </section>
     <!--END PORTFOLIO-->
+    <!--PORTFOLIO-->
     <section class="contact" id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
         <form action="#">
@@ -187,6 +188,16 @@
             <input type="submit" value="Send Message" class="btn">
         </form>
     </section>
+    <!--END PORTFOLIO-->
+
+    <footer class="footer">
+        <div class="footer-text">
+            <p>Copyright &copy; 2023 by <a href="https://www.linkedin.com/in/mostafasaleh5"><span>Mostafa Saleh</span></a></p>
+        </div>
+        <div class="footer-iconTop">
+            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+        </div>
+    </footer>
 
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
     <script src="js/js.js"></script>
