adding titles to social media,fixing menu-icon and controling overall font-size using Javascript

--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
             <h3>And I'm a <span class="typed"></span></h3>
             <p>I'm a software developer who is passionate about creating technology to elevate people and help new developers to find the right path. Some technologies I enjoy working with include Javascript, ReactJS.</p>
             <div class="social-media">
-                <a href="https://www.facebook.com/Saleh2011/"style="--i:1" target="_blank"><i class='bx bxl-facebook'></i></a>
-                <a href="https://www.instagram.com/mostafamsaleh/"style="--i:2" target="_blank"><i class='bx bxl-instagram'></i></a>
-                <a href="https://www.linkedin.com/in/mostafasaleh5/"style="--i:3" target="_blank"><i class='bx bxl-linkedin'></i></a>
-                <a href="https://wa.me/+201140855227"style="--i:4" target="_blank"><i class='bx bxl-whatsapp'></i></a>
-                <a href="https://github.com/mostafasaleh1"style="--i:5" target="_blank"><i class='bx bxl-github'></i></a>
-                <a href="mailto:most.saleh@hotmail.com"style="--i:6"><i class='bx bx-envelope'></i></a>
-                <a href="https://telegram.me/+79998102536?start=chat"style="--i:7" target="_blank"><i class='bx bxl-telegram'></i></a>
-                <a href="tel:+201140855227"style="--i:8"><i class='bx bxs-phone'></i></a>
+                <a href="https://www.facebook.com/Saleh2011/"style="--i:1" title="Facebook" target="_blank"><i class='bx bxl-facebook'></i></a>
+                <a href="https://www.instagram.com/mostafamsaleh/"style="--i:2" title="Instagram" target="_blank"><i class='bx bxl-instagram'></i></a>
+                <a href="https://www.linkedin.com/in/mostafasaleh5/"style="--i:3" title="Linkedin" target="_blank"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://wa.me/+201140855227"style="--i:4" title="Whatsapp" target="_blank"><i class='bx bxl-whatsapp'></i></a>
+                <a href="https://github.com/mostafasaleh1"style="--i:5" title="Github" target="_blank"><i class='bx bxl-github'></i></a>
+                <a href="mailto:most.saleh@hotmail.com"style="--i:6" title="Email"><i class='bx bx-envelope'></i></a>
+                <a href="https://telegram.me/+79998102536?start=chat"style="--i:7" title="Telegram" target="_blank"><i class='bx bxl-telegram'></i></a>
+                <a href="tel:+201140855227"style="--i:8" title="Phone"><i class='bx bxs-phone'></i></a>
             </div>
             <a href="https://github.com/mostafasaleh1/CV/raw/main/CV.pdf" class="btn">Download CV</a>
         </div>
@@ -192,7 +192,7 @@
 
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 by <a href="https://www.linkedin.com/in/mostafasaleh5"><span>Mostafa Saleh</span></a></p>
+            <p>Copyright &copy; 2023 by <a href="https://www.linkedin.com/in/mostafasaleh5" target="_blank"><span>Mostafa Saleh</span></a></p>
         </div>
         <div class="footer-iconTop">
             <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
