adding responsive design for 617px, 450px, 365px devices

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
         </form>
     </section>
     <!--END PORTFOLIO-->
-
+    <!--FOOTER-->
     <footer class="footer">
         <div class="footer-text">
             <p>Copyright &copy; 2023 by <a href="https://www.linkedin.com/in/mostafasaleh5" target="_blank"><span>Mostafa Saleh</span></a></p>
@@ -198,7 +198,8 @@
             <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
         </div>
     </footer>
-
+    <!--END FOOTER-->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="https://unpkg.com/typed.js@2.0.15/dist/typed.umd.js"></script>
     <script src="js/js.js"></script>
 </body>
