fixing contact form subject and number areas

--- a/index.html
+++ b/index.html
@@ -181,10 +181,10 @@
                 <input type="email" placeholder="Email Address">
             </div>
             <div class="input-box">
-                <input type="text" placeholder="Mobile Number">
-                <input type="email" placeholder="Email Subject">
+                <input type="number" placeholder="Mobile Number">
+                <input type="text" placeholder="Email Subject">
             </div>
-            <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" style="resize: none;"></textarea>
+            <textarea name="textarea" id="text-area" cols="30" rows="10" placeholder="Your Message" style="resize: none;"></textarea>
             <input type="submit" value="Send Message" class="btn">
         </form>
     </section>
