--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="#"><i class='bx bx-link-external' title="#"></i></a>
                 </div>
             </div>
 
@@ -130,7 +130,7 @@
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="#"><i class='bx bx-link-external' title="#"></i></a>
                 </div>
             </div>
             
@@ -139,7 +139,7 @@
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="#"><i class='bx bx-link-external' title="#"></i></a>
                 </div>
             </div>
 
@@ -148,7 +148,7 @@
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="#"><i class='bx bx-link-external' title="#"></i></a>
                 </div>
             </div>
 
@@ -157,7 +157,7 @@
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="#"><i class='bx bx-link-external' title="#"></i></a>
                 </div>
             </div>
 
@@ -166,7 +166,7 @@
                 <div class="portfolio-layer">
                     <h4>Web Design</h4>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, sequi.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="#"><i class='bx bx-link-external' title="#"></i></a>
                 </div>
             </div>
         </div>
@@ -195,7 +195,7 @@
             <p>Copyright &copy; 2023 by <a href="https://www.linkedin.com/in/mostafasaleh5" target="_blank"><span>Mostafa Saleh</span></a></p>
         </div>
         <div class="footer-iconTop">
-            <a href="#home"><i class='bx bx-up-arrow-alt'></i></a>
+            <a href="#home"><i class='bx bx-up-arrow-alt' title="#"></i></a>
         </div>
     </footer>
     <!--END FOOTER-->
