adding some SEO features + google webmaster verification tag

--- a/index.html
+++ b/index.html
@@ -4,21 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies and my perspective in some topics, my name is Mostafa Saleh.">
+    <meta name="description" content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
     <meta name="author" content="Mostafa Saleh">
 
     <!--Open Graph Meta Tags-->
     <meta property="og:url" content="eng-mostafasaleh.blogspot.com">
     <meta property="og:title" content="Mostafa Saleh">
-    <meta property="og:description" content="This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies and my perspective in some topics, my name is Mostafa Saleh.">
+    <meta property="og:description" content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
     <meta property="og:image" content="">
     <meta name="twitter:card" content="summary_large_image">
     <meta property="twitter:domain" content="eng-mostafasaleh.blogspot.com">
     <meta property="twitter:url" content="eng-mostafasaleh.blogspot.com">
     <meta name="twitter:title" content="Mostafa Saleh">
-    <meta name="twitter:description" content="This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies and my perspective in some topics, my name is Mostafa Saleh.">
+    <meta name="twitter:description" content="My name is Mostafa Saleh. This is my Personal website, Profile and Portfolio, in which in introduce my self, my strengths, and a brief of my hobbies, my perspective in some topics, my projects and services. Feel free to contact me for help, work or anything.">
     <meta name="twitter:image" content="">
     <!--END Open Graph Meta Tags-->
+
+    <!-- Google webmaster verification tag -->
+    <meta name="google-site-verification" content="svPTwYXRS4gmgAkmuaVPmMC2BDullsvy3Oowz2BMun0" />
 
     <!--Favicon-->
     <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
@@ -35,7 +38,37 @@
 
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="styles/styles.css">
-    <title>Mostafa Saleh</title>
+    <title>Mostafa Saleh portfolio website. Here I post my project, services, contacts and much more.</title>
+
+    <!-- JSON-LD code, it's added for each page, article separately to structure the code for search engines -->
+    <!-- <script type="application/ld+json">
+        {
+            "@context": "https://schema.org/",
+            "@type": "Recipe",
+            "name": "Apple Pie by Grandma",
+            "author": "Elaine Smith",
+            "image": "https://images.edge-generalmills.com/56459281-6fe6-4d9d-984f-385c9488d824.jpg",
+            "description": "A classic apple pie.",
+            "aggregateRating": {
+            "@type": "AggregateRating",
+            "ratingValue": "4.8",
+            "reviewCount": "7462",
+            "bestRating": "5",
+            "worstRating": "1"
+            },
+            "prepTime": "PT30M",
+            "totalTime": "PT1H30M",
+            "recipeYield": "8",
+            "nutrition": {
+            "@type": "NutritionInformation",
+            "calories": "512 calories"
+            },
+            "recipeIngredient": [
+            "1 box refrigerated pie crusts, softened as directed on box",
+            "6 cups thinly sliced, peeled apples (6 medium)"
+            ]
+        }
+        </script> -->
 </head>
 <body>
     <header class="header">
@@ -50,7 +83,7 @@
     </header>
     <!--HOME-->
     <section class="home" id="home">
-        <div class="home-content">
+        <main class="home-content">
             <h3>Hello, It's me</h3>
             <h1>Mostafa Saleh</h1>
             <h3>And I'm a <span class="typed"></span></h3>
@@ -66,7 +99,7 @@
                 <a href="tel:+201140855227"style="--i:8" title="Phone"><i class='bx bxs-phone'></i></a>
             </div>
             <a href="https://github.com/mostafasaleh1/CV/raw/main/CV.pdf" class="btn">Download CV</a>
-        </div>
+        </main>
         <div class="home-img">
             <img class="home-img" src="images/1.jpg" alt="img">
         </div>
@@ -77,12 +110,12 @@
         <div class="about-img">
             <img src="images/1.jpg" alt="about img">
         </div>
-        <div class="about-content">
+        <main class="about-content">
             <h2 class="heading">About <span>Me</span></h2>
             <h3>Frontend Developer</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Id eveniet explicabo similique soluta illo numquam suscipit veritatis, quas laudantium totam dolorum necessitatibus in quo exercitationem ullam. Voluptatem consequuntur dicta sed eaque, sapiente maiores non facilis vero error, temporibus quaerat, accusamus animi quidem? Cupiditate corporis ex vero.</p>
             <a href="#" class="btn">Read More</a>
-        </div>
+        </main>
     </section>
     <!--END ABOUT-->
     <!--SERVICES-->
