adding title attribute to different links on the html document

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
     <link rel="stylesheet" href="styles/styles.css">
     <title>Mostafa Saleh portfolio website. Here I post my project, services, contacts and much more.</title>
 
-    <!-- JSON-LD code, it's added for each page, article separately to structure the code for search engines -->
+    <!-- JSON-LD code, it's added for each page separately to structure the code for search engines -->
+    <!-- link for different type of structured content https://developers.google.com/search/docs/appearance/structured-data/search-gallery -->
     <!-- <script type="application/ld+json">
         {
             "@context": "https://schema.org/",
@@ -74,18 +75,18 @@
     <header class="header">
         <i class='bx bx-menu' id="menu-icon"></i>
         <nav class="navbar">
-            <a href="#home" class="navbar-links active">Home</a>
-            <a href="#about" class="navbar-links">About</a>
-            <a href="#services" class="navbar-links">Services</a>
-            <a href="#portfolio" class="navbar-links">Portfolio</a>
-            <a href="#contact" class="navbar-links">Contact</a>
+            <a href="#home" class="navbar-links active" title="home">Home</a>
+            <a href="#about" class="navbar-links" title="about">About</a>
+            <a href="#services" class="navbar-links" title="services">Services</a>
+            <a href="#portfolio" class="navbar-links" title="portfolio">Portfolio</a>
+            <a href="#contact" class="navbar-links" title="contact">Contact</a>
         </nav>
     </header>
     <!--HOME-->
     <section class="home" id="home">
         <main class="home-content">
             <h3>Hello, It's me</h3>
-            <h1>Mostafa Saleh</h1>
+            <h1><strong>Mostafa Saleh</strong></h1>
             <h3>And I'm a <span class="typed"></span></h3>
             <p>I'm a software developer who is passionate about creating technology to elevate people and help new developers to find the right path. Some technologies I enjoy working with include Javascript, ReactJS.</p>
             <div class="social-media">
@@ -225,7 +226,7 @@
     <!--FOOTER-->
     <footer class="footer">
         <div class="footer-text">
-            <p>Copyright &copy; 2023 by <a href="https://www.linkedin.com/in/mostafasaleh5" target="_blank"><span>Mostafa Saleh</span></a></p>
+            <p>Copyright &copy; 2023 by <a href="https://www.linkedin.com/in/mostafasaleh5" title="Mostafa Saleh Linkedin" target="_blank"><span>Mostafa Saleh</span></a></p>
         </div>
         <div class="footer-iconTop">
             <a href="#home"><i class='bx bx-up-arrow-alt' title="#"></i></a>
